# lazy_bazel_env.bzl

./: .pre-commit-config.yaml  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  defs.bzl  eager_launcher.sh.tpl  go.mod  lazy_launcher.sh.tpl  lazy_status.sh.tpl
examples/: README.md
examples/basic/: MODULE.bazel  README.md
examples/basic/tools/: BUILD
examples/go/: BUILD  MODULE.bazel  README.md  go.mod  go.sum
examples/go/tools/: BUILD
examples/multitool/: BUILD  MODULE.bazel  README.md  multitool.lock.json
examples/multitool/tools/: BUILD
examples/toolchains/: .envrc  BUILD  MODULE.bazel  README.md
examples/toolchains/tools/: BUILD
tools/: BUILD
