module(
    name = "go_example",
    version = "0.0.0",
)

bazel_dep(name = "lazy_bazel_env.bzl", version = "0.0.0")
local_path_override(
    module_name = "lazy_bazel_env.bzl",
    path = "../..",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    go_mod = "//:go.mod",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_bazelbuild_bazel_watcher",
)
