module(
    name = "toolchains_example",
    version = "0.0.0",
)

bazel_dep(name = "lazy_bazel_env.bzl", version = "0.0.0")
local_path_override(
    module_name = "lazy_bazel_env.bzl",
    path = "../..",
)

bazel_dep(name = "jq.bzl", version = "0.4.0")

jq_toolchains = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(jq_toolchains, "jq_toolchains")
